comments about date preprocessing added

--- a/LinearRegression.ipynb
+++ b/LinearRegression.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ba290467",
+   "id": "809607f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d11a2928",
+   "id": "f90e91b5",
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "26b0a902",
+   "id": "61ffdd76",
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a6f97afc",
+   "id": "59932800",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d8e0a9cb",
+   "id": "20694e2c",
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1b919989",
+   "id": "b349af5c",
    "metadata": {},
    "outputs": [
     {
@@ -198,19 +198,75 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "8a3d82f7",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2021-12-03'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_data['install_date'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
-   "id": "41dc9e4a",
+   "id": "e990e533",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(raw_data['install_date'][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "bac40451",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# just for now, idk what to do with it\n",
+    "\"\"\"\n",
+    "Data needed to be transformed into:\n",
+    "1) Time since 1970 (Unix date) continuous\n",
+    "2) Day of a year [1, 365] categorical\n",
+    "3) Month of a year [1, 12] categorical\n",
+    "4) Day of a week in [1, 7] categorical\n",
+    "5) Is weekend binary\n",
+    "6) Is holyday binary\n",
+    "\"\"\"\n",
+    "dates = raw_data['install_date']\n",
+    "\n",
+    "\n",
+    "\n",
     "dummy_data.drop('install_date', axis = 1, inplace = True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e39dd622",
+   "id": "b63da9e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6778b6f9",
+   "id": "1ca9e532",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3bb0d0e3",
+   "id": "5de3ef0c",
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "bfb7b991",
+   "id": "63efccdd",
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c53e597d",
+   "id": "4f6a49b8",
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "22ae804e",
+   "id": "c869057c",
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "be8a6e46",
+   "id": "4df4ce6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10c6439a",
+   "id": "81845406",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -537,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67a50c86",
+   "id": "c510ad70",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -545,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30a84227",
+   "id": "8e6834d5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -553,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e895bb26",
+   "id": "968da47b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -561,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b95513f5",
+   "id": "73beabd9",
    "metadata": {},
    "outputs": [],
    "source": []
