--- a/LinearRegression.ipynb
+++ b/LinearRegression.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "809607f4",
+   "id": "6d35b2e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f90e91b5",
+   "id": "d4c0aeee",
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "61ffdd76",
+   "id": "20498a84",
    "metadata": {},
    "outputs": [
     {
@@ -82,65 +82,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "59932800",
+   "id": "facc4512",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   _COUNTRY_0  _COUNTRY_1  _COUNTRY_10  _COUNTRY_100  _COUNTRY_101  \\\n",
-      "0           0           0            0             0             0   \n",
-      "1           0           0            0             0             0   \n",
-      "2           0           0            0             0             0   \n",
-      "3           0           0            0             0             0   \n",
-      "4           0           0            0             0             0   \n",
-      "5           0           0            0             0             0   \n",
-      "6           0           0            0             0             0   \n",
-      "7           0           0            0             0             0   \n",
-      "8           0           0            0             0             0   \n",
-      "9           0           0            0             0             0   \n",
-      "\n",
-      "   _COUNTRY_102  _COUNTRY_103  _COUNTRY_104  _COUNTRY_105  _COUNTRY_106  ...  \\\n",
-      "0             0             0             0             0             0  ...   \n",
-      "1             0             0             0             0             0  ...   \n",
-      "2             0             0             0             0             0  ...   \n",
-      "3             0             0             0             0             0  ...   \n",
-      "4             0             0             0             0             0  ...   \n",
-      "5             0             0             0             0             0  ...   \n",
-      "6             0             0             0             0             0  ...   \n",
-      "7             0             0             0             0             0  ...   \n",
-      "8             0             0             0             0             0  ...   \n",
-      "9             0             0             0             0             0  ...   \n",
-      "\n",
-      "   _COUNTRY_90  _COUNTRY_91  _COUNTRY_92  _COUNTRY_93  _COUNTRY_94  \\\n",
-      "0            0            0            0            0            0   \n",
-      "1            0            0            0            0            0   \n",
-      "2            0            0            0            0            0   \n",
-      "3            0            0            0            0            0   \n",
-      "4            0            0            0            0            0   \n",
-      "5            0            0            0            0            0   \n",
-      "6            0            0            0            0            0   \n",
-      "7            0            0            0            0            0   \n",
-      "8            0            0            0            0            0   \n",
-      "9            0            0            0            0            0   \n",
-      "\n",
-      "   _COUNTRY_95  _COUNTRY_96  _COUNTRY_97  _COUNTRY_98  _COUNTRY_99  \n",
-      "0            0            0            0            0            0  \n",
-      "1            0            0            0            0            0  \n",
-      "2            0            0            0            0            0  \n",
-      "3            0            0            0            0            0  \n",
-      "4            0            0            0            0            0  \n",
-      "5            0            0            0            0            0  \n",
-      "6            0            0            0            0            0  \n",
-      "7            0            0            0            0            0  \n",
-      "8            0            0            0            0            0  \n",
-      "9            0            0            0            0            0  \n",
-      "\n",
-      "[10 rows x 224 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "platform_dummies = pd.get_dummies(raw_data['platform'], prefix = 'platform')\n",
     "media_dummies = pd.get_dummies(raw_data['media_source'], prefix = '')\n",
@@ -150,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "20694e2c",
+   "id": "48ddd808",
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b349af5c",
+   "id": "2f601404",
    "metadata": {},
    "outputs": [
     {
@@ -198,8 +142,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "8a3d82f7",
+   "execution_count": 7,
+   "id": "ddb3ca65",
    "metadata": {
     "scrolled": true
    },
@@ -207,22 +151,22 @@
     {
      "data": {
       "text/plain": [
-       "'2021-12-03'"
+       "'2022-01-24'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "raw_data['install_date'][0]"
+    "raw_data['install_date'][120000]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "e990e533",
+   "execution_count": 8,
+   "id": "e8501bc0",
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +175,7 @@
        "str"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,11 +186,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "bac40451",
+   "execution_count": 9,
+   "id": "795f912f",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from datetime import datetime\n",
     "\"\"\"\n",
     "Data needed to be transformed into:\n",
     "1) Time since 1970 (Unix date) continuous\n",
@@ -254,19 +199,86 @@
     "3) Month of a year [1, 12] categorical\n",
     "4) Day of a week in [1, 7] categorical\n",
     "5) Is weekend binary\n",
-    "6) Is holyday binary\n",
     "\"\"\"\n",
-    "dates = raw_data['install_date']\n",
     "\n",
     "\n",
+    "def transform_date(dates_frame: pd.DataFrame): # return pd.DataFrame\n",
+    "    \n",
+    "    py_dates = []\n",
+    "    for el in dates_frame:\n",
+    "        py_dates.append(datetime.strptime(el, '%Y-%m-%d'))\n",
     "\n",
-    "dummy_data.drop('install_date', axis = 1, inplace = True)"
+    "    \n",
+    "    dates_list = [] # Unix time \n",
+    "    day_of_a_year_list = [] # Day of year\n",
+    "    month_of_a_year = [] # month of a year\n",
+    "    day_of_a_week = [] # day of a week\n",
+    "    is_weekend = [] # is day a weekend \n",
+    "\n",
+    "\n",
+    "    for el in py_dates:\n",
+    "        dates_list.append(el.strftime(\"%s\"))\n",
+    "        day_of_a_year_list.append(el.timetuple().tm_yday)\n",
+    "        month_of_a_year.append(el.timetuple().tm_mon)\n",
+    "        day_of_a_week.append(el.weekday())\n",
+    "        is_weekend.append((el.weekday() > 4))\n",
+    "    \n",
+    "    \n",
+    "    a = pd.DataFrame({\"_\":day_of_a_year_list})\n",
+    "    b = pd.DataFrame({\"_\":day_of_a_week})\n",
+    "    c = pd.DataFrame({\"_\": month_of_a_year})\n",
+    "                     \n",
+    "    d_year_day = pd.get_dummies(a[\"_\"], prefix = 'day')\n",
+    "    d_month_of_year = pd.get_dummies(c[\"_\"], prefix = 'month')\n",
+    "    d_weekday = pd.get_dummies(b[\"_\"], prefix = 'weekday')\n",
+    "    d_weekend = pd.DataFrame({\"is_weekend\" : is_weekend})\n",
+    "\n",
+    "    print(d_year_day.shape, d_month_of_year.shape, d_weekday.shape, d_weekend.shape, sep = '\\n')\n",
+    "    \n",
+    "    return pd.concat([pd.DataFrame({\"unix date\": dates_list}),\n",
+    "                        d_year_day, d_month_of_year, d_weekday, d_weekend], axis = 1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "30d6d7de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1467832, 62)\n",
+      "(1467832, 2)\n",
+      "(1467832, 7)\n",
+      "(1467832, 1)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1467832, 382)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dummy_data = pd.concat([dummy_data,transform_date(raw_data['install_date'])], axis = 1)\n",
+    "dummy_data.drop('install_date', axis = 1, inplace=True)\n",
+    "dummy_data.shape\n",
+    "\n",
+    "# Now dataframe is fully prepeared for machine learning"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b63da9e5",
+   "id": "e088b6ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "1ca9e532",
+   "id": "ff7f9c70",
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "5de3ef0c",
+   "id": "f0f537f1",
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "63efccdd",
+   "id": "5cb662c2",
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "4f6a49b8",
+   "id": "8c2c126a",
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "c869057c",
+   "id": "e83e929a",
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "4df4ce6a",
+   "id": "055a76b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81845406",
+   "id": "b4c30255",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -593,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c510ad70",
+   "id": "a313933a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -601,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e6834d5",
+   "id": "1206e71d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -609,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "968da47b",
+   "id": "fe49eb57",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -617,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73beabd9",
+   "id": "ff9737e2",
    "metadata": {},
    "outputs": [],
    "source": []
