Some memory optimization

--- a/LinearRegression.ipynb
+++ b/LinearRegression.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6d35b2e2",
+   "id": "74c665a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d4c0aeee",
+   "id": "e3eecf3d",
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "20498a84",
+   "id": "f6803e78",
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "facc4512",
+   "id": "6c5d9f93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,36 +93,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "48ddd808",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1467832, 313)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dummy_data = pd.concat([raw_data, platform_dummies, media_dummies, country_dummies], axis = 1)\n",
-    "dummy_data.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
-   "id": "2f601404",
+   "id": "83809aaa",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1467832, 310)"
+       "(1467832, 563)"
       ]
      },
      "execution_count": 6,
@@ -131,19 +109,42 @@
     }
    ],
    "source": [
-    "dummy_data.drop('platform', axis = 1, inplace = True)\n",
-    "dummy_data.drop('country_code', axis = 1, inplace = True)\n",
-    "dummy_data.drop('media_source', axis = 1, inplace = True)\n",
-    "\n",
-    "\n",
-    "\n",
+    "raw_data = pd.concat([raw_data, platform_dummies, media_dummies, country_dummies], axis = 1)\n",
+    "dummy_data = raw_data\n",
     "dummy_data.shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ddb3ca65",
+   "id": "01a96cd2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1467832, 560)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_data.drop('platform', axis = 1, inplace = True)\n",
+    "raw_data.drop('country_code', axis = 1, inplace = True)\n",
+    "raw_data.drop('media_source', axis = 1, inplace = True)\n",
+    "\n",
+    "\n",
+    "\n",
+    "raw_data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d90e53b0",
    "metadata": {
     "scrolled": true
    },
@@ -154,7 +155,7 @@
        "'2022-01-24'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,8 +166,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "e8501bc0",
+   "execution_count": 9,
+   "id": "1039797c",
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +176,7 @@
        "str"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,8 +187,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "795f912f",
+   "execution_count": 10,
+   "id": "f6f1c19a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,31 +243,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "30d6d7de",
+   "execution_count": null,
+   "id": "95bbbf15",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1467832, 62)\n",
-      "(1467832, 2)\n",
-      "(1467832, 7)\n",
-      "(1467832, 1)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(1467832, 382)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dummy_data = pd.concat([dummy_data,transform_date(raw_data['install_date'])], axis = 1)\n",
     "dummy_data.drop('install_date', axis = 1, inplace=True)\n",
@@ -277,8 +257,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "e088b6ec",
+   "execution_count": null,
+   "id": "6fd6b72e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,41 +268,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "ff7f9c70",
+   "execution_count": null,
+   "id": "50faa6fd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-12-8439f0fa05a0>:4: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only.\n",
-      "  train_set_y = train.drop(train.columns.difference(['target_sub_ltv_day30', 'target_iap_ltv_day30', 'target_ad_ltv_day30',\n",
-      "<ipython-input-12-8439f0fa05a0>:7: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  train.drop(['target_sub_ltv_day30', 'target_iap_ltv_day30', 'target_ad_ltv_day30',\n",
-      "<ipython-input-12-8439f0fa05a0>:11: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only.\n",
-      "  test_set_y = test.drop(train.columns.difference(['target_sub_ltv_day30', 'target_iap_ltv_day30', 'target_ad_ltv_day30',\n",
-      "<ipython-input-12-8439f0fa05a0>:14: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  test.drop(['target_sub_ltv_day30', 'target_iap_ltv_day30', 'target_ad_ltv_day30',\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(147, 4)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Spliting dataset for training \n",
     "train, test = train_test_split(dummy_data, test_size=0.0001)\n",
@@ -353,218 +302,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "f0f537f1",
+   "execution_count": null,
+   "id": "bd468fff",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1467685, 305)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_set_x.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "5cb662c2",
+   "execution_count": null,
+   "id": "dbe3d3ab",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1467685, 4)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_set_y.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "8c2c126a",
+   "execution_count": null,
+   "id": "1640dbaf",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(147, 305)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_set_x.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "e83e929a",
+   "execution_count": null,
+   "id": "6bc5c2a4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>target_sub_ltv_day30</th>\n",
-       "      <th>target_iap_ltv_day30</th>\n",
-       "      <th>target_ad_ltv_day30</th>\n",
-       "      <th>target_full_ltv_day30</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1444320</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>258693</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1136736</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.40409</td>\n",
-       "      <td>0.050822</td>\n",
-       "      <td>0.454912</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1092325</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>528678</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>345002</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>783683</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1145602</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>550303</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>268689</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>147 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         target_sub_ltv_day30  target_iap_ltv_day30  target_ad_ltv_day30  \\\n",
-       "1444320                   0.0               0.00000             0.000000   \n",
-       "258693                    0.0               0.00000             0.000000   \n",
-       "1136736                   0.0               0.40409             0.050822   \n",
-       "1092325                   0.0               0.00000             0.000000   \n",
-       "528678                    0.0               0.00000             0.000000   \n",
-       "...                       ...                   ...                  ...   \n",
-       "345002                    0.0               0.00000             0.000000   \n",
-       "783683                    0.0               0.00000             0.000000   \n",
-       "1145602                   0.0               0.00000             0.000000   \n",
-       "550303                    0.0               0.00000             0.000000   \n",
-       "268689                    0.0               0.00000             0.000000   \n",
-       "\n",
-       "         target_full_ltv_day30  \n",
-       "1444320               0.000000  \n",
-       "258693                0.000000  \n",
-       "1136736               0.454912  \n",
-       "1092325               0.000000  \n",
-       "528678                0.000000  \n",
-       "...                        ...  \n",
-       "345002                0.000000  \n",
-       "783683                0.000000  \n",
-       "1145602               0.000000  \n",
-       "550303                0.000000  \n",
-       "268689                0.000000  \n",
-       "\n",
-       "[147 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#reg = LinearRegression().fit(train_set_x, train_set_y)\n",
     "#reg.score(train_set_x, train_set_y)\n",
@@ -581,23 +352,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "055a76b3",
+   "execution_count": null,
+   "id": "c1bb2442",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Training simple logistoic regression\n",
     "\n",
     "#unfortunately now it throws error about containing infinity. IDK where they are, so ...\n",
+    "train_set_x = train_set_x.reset_index()\n",
+    "train_set_y = train_set_y.reset_index()\n",
     "\n",
-    "#reg = LinearRegression().fit(train_set_x, train_set_y)\n",
-    "#reg.score(train_set_x, train_set_y)"
+    "reg = LinearRegression().fit(train_set_x, train_set_y)\n",
+    "reg.score(train_set_x, train_set_y)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4c30255",
+   "id": "10396331",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -605,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a313933a",
+   "id": "286863c9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -613,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1206e71d",
+   "id": "fa2b2d69",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -621,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe49eb57",
+   "id": "e57bfc33",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -629,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff9737e2",
+   "id": "90a91eab",
    "metadata": {},
    "outputs": [],
    "source": []
