--- a/LinearRegression.ipynb
+++ b/LinearRegression.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "74c665a2",
+   "id": "7065228e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e3eecf3d",
+   "id": "225b8e09",
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f6803e78",
+   "id": "439c273c",
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6c5d9f93",
+   "id": "7f7efa67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "83809aaa",
+   "id": "c36f96a2",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "01a96cd2",
+   "id": "f1293c80",
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d90e53b0",
+   "id": "4591c059",
    "metadata": {
     "scrolled": true
    },
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1039797c",
+   "id": "6d59f9ab",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f6f1c19a",
+   "id": "274fbd77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,10 +243,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "95bbbf15",
+   "execution_count": 11,
+   "id": "6468ed66",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1467832, 62)\n",
+      "(1467832, 2)\n",
+      "(1467832, 7)\n",
+      "(1467832, 1)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1467832, 632)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dummy_data = pd.concat([dummy_data,transform_date(raw_data['install_date'])], axis = 1)\n",
     "dummy_data.drop('install_date', axis = 1, inplace=True)\n",
@@ -257,8 +278,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6fd6b72e",
+   "execution_count": 12,
+   "id": "61dcaf8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,10 +289,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "50faa6fd",
+   "execution_count": 13,
+   "id": "fce789ae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-13-8439f0fa05a0>:4: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only.\n",
+      "  train_set_y = train.drop(train.columns.difference(['target_sub_ltv_day30', 'target_iap_ltv_day30', 'target_ad_ltv_day30',\n",
+      "<ipython-input-13-8439f0fa05a0>:7: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  train.drop(['target_sub_ltv_day30', 'target_iap_ltv_day30', 'target_ad_ltv_day30',\n",
+      "<ipython-input-13-8439f0fa05a0>:11: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only.\n",
+      "  test_set_y = test.drop(train.columns.difference(['target_sub_ltv_day30', 'target_iap_ltv_day30', 'target_ad_ltv_day30',\n",
+      "<ipython-input-13-8439f0fa05a0>:14: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  test.drop(['target_sub_ltv_day30', 'target_iap_ltv_day30', 'target_ad_ltv_day30',\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(147, 4)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Spliting dataset for training \n",
     "train, test = train_test_split(dummy_data, test_size=0.0001)\n",
@@ -302,40 +354,218 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bd468fff",
+   "execution_count": 14,
+   "id": "97f688cd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1467685, 628)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train_set_x.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "dbe3d3ab",
+   "execution_count": 15,
+   "id": "6c4068d1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1467685, 4)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train_set_y.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1640dbaf",
+   "execution_count": 16,
+   "id": "89aca4f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(147, 628)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "test_set_x.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6bc5c2a4",
+   "execution_count": 17,
+   "id": "63b9b361",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>target_sub_ltv_day30</th>\n",
+       "      <th>target_iap_ltv_day30</th>\n",
+       "      <th>target_ad_ltv_day30</th>\n",
+       "      <th>target_full_ltv_day30</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1308926</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.665738</td>\n",
+       "      <td>0.272696</td>\n",
+       "      <td>3.938434</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>164</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>744791</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>212322</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.013456</td>\n",
+       "      <td>0.013456</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>736159</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1357858</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75570</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1323771</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>180743</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>498490</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>147 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         target_sub_ltv_day30  target_iap_ltv_day30  target_ad_ltv_day30  \\\n",
+       "1308926                   0.0              3.665738             0.272696   \n",
+       "164                       0.0              0.000000             0.000000   \n",
+       "744791                    0.0              0.000000             0.000000   \n",
+       "212322                    0.0              0.000000             0.013456   \n",
+       "736159                    0.0              0.000000             0.000000   \n",
+       "...                       ...                   ...                  ...   \n",
+       "1357858                   0.0              0.000000             0.000000   \n",
+       "75570                     0.0              0.000000             0.000000   \n",
+       "1323771                   0.0              0.000000             0.000000   \n",
+       "180743                    0.0              0.000000             0.000000   \n",
+       "498490                    0.0              0.000000             0.000000   \n",
+       "\n",
+       "         target_full_ltv_day30  \n",
+       "1308926               3.938434  \n",
+       "164                   0.000000  \n",
+       "744791                0.000000  \n",
+       "212322                0.013456  \n",
+       "736159                0.000000  \n",
+       "...                        ...  \n",
+       "1357858               0.000000  \n",
+       "75570                 0.000000  \n",
+       "1323771               0.000000  \n",
+       "180743                0.000000  \n",
+       "498490                0.000000  \n",
+       "\n",
+       "[147 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#reg = LinearRegression().fit(train_set_x, train_set_y)\n",
     "#reg.score(train_set_x, train_set_y)\n",
@@ -353,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1bb2442",
+   "id": "3fada89b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10396331",
+   "id": "993f784c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -378,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "286863c9",
+   "id": "c91e8e44",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -386,7 +616,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa2b2d69",
+   "id": "b10f85bc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -394,7 +624,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e57bfc33",
+   "id": "f5cbf367",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -402,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90a91eab",
+   "id": "dc465020",
    "metadata": {},
    "outputs": [],
    "source": []
