--- a/hackaton dataset overview.ipynb
+++ b/hackaton dataset overview.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "id": "b3ccad71",
+   "execution_count": 1,
+   "id": "ee956d4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,8 +13,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "id": "f3501307",
+   "execution_count": 2,
+   "id": "1bb8d702",
    "metadata": {},
    "outputs": [
     {
@@ -101,8 +101,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "id": "582a2629",
+   "execution_count": 3,
+   "id": "5e6a2597",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
        "Length: 63, dtype: int64"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,8 +133,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "id": "4b91c097",
+   "execution_count": 4,
+   "id": "19dec419",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,8 +145,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "id": "85ac95d0",
+   "execution_count": 5,
+   "id": "f33536dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,8 +155,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "id": "776ab6f9",
+   "execution_count": 6,
+   "id": "414587e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,8 +165,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "id": "ee9cc4d5",
+   "execution_count": 7,
+   "id": "0917cb12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,8 +177,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "id": "d1440a58",
+   "execution_count": 8,
+   "id": "15c05cfb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,8 +189,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "id": "285160ef",
+   "execution_count": 9,
+   "id": "bfcd8e79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,8 +201,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "id": "b1301148",
+   "execution_count": 10,
+   "id": "7107599d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,8 +211,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "id": "90a2c0ba",
+   "execution_count": 11,
+   "id": "16f5f9e7",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9641211",
+   "id": "08b1ceb1",
    "metadata": {},
    "source": [
     "from sklearn.model_selection import train_test_split\n",
@@ -554,8 +554,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "id": "a93c964a",
+   "execution_count": 12,
+   "id": "fa7501f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,40 +563,44 @@
     "\n",
     "X = df.drop('target_full_ltv_day30',axis=1).values\n",
     "y = df['target_full_ltv_day30'].values\n",
+    "del df\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.001, random_state=69)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9cf9de87",
+   "execution_count": 13,
+   "id": "88da9de5",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import MinMaxScaler\n",
     "scaler = MinMaxScaler()\n",
     "X_train = scaler.fit_transform(X_train)\n",
-    "X_test = scaler.transform(X_test)"
+    "X_test = scaler.transform(X_test)\n",
+    "del X, y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d14f50b0",
-   "metadata": {},
+   "execution_count": 14,
+   "id": "a5d9d517",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import Dense, Activation, Dropout\n",
-    "from tensorflow.keras.constraints import max_norm'"
+    "from tensorflow.keras.constraints import max_norm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c3a115ad",
+   "execution_count": 15,
+   "id": "b7ebd0ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,8 +613,63 @@
     "model.add(Dense(19, activation='relu'))\n",
     "model.add(Dense(1,))\n",
     "\n",
-    "model.compile(optimizer='Adam', loss = 'rmse')"
+    "model.compile(optimizer='Adam', loss = 'mean_absolute_error')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46ea6cb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/100\n",
+      " 5639/45781 [==>...........................] - ETA: 2:59 - loss: 0.1112"
+     ]
+    }
+   ],
+   "source": [
+    "model.fit(X_train, y_train, epochs=100,\n",
+    "    # Suppress logging.\n",
+    "    verbose=1,\n",
+    "    # Calculate validation results on 20% of the training data.\n",
+    "   )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60bf5aa1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b4def96",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83846d68",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8302e0b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -629,7 +688,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
