init model via for loop

--- a/dev/Train.ipynb
+++ b/dev/Train.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "c5345ce2",
+   "execution_count": 3,
+   "id": "26ebab71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,25 +15,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "c1e30ea4",
+   "execution_count": 4,
+   "id": "4fcfbd7f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_model(model_file = None, loss_func = 'mean_absolute_error', output_layer = 4\n",
-    "             , metrics = [\n",
+    "def get_model(model_file = None, loss_func = 'mean_absolute_error', output_layer = 4, \n",
+    "              number_of_hidden_layers = 7, \n",
+    "              input_layer = 305,\n",
+    "              n_hidden_layer = 305,\n",
+    "              metrics = [\n",
     "                metrics.RootMeanSquaredError(),\n",
     "                metrics.MeanAbsoluteError(),\n",
     "                    metrics.MeanAbsolutePercentageError()\n",
     "            ]):\n",
     "        if(not model_file):\n",
     "            model = tf.keras.models.Sequential()\n",
-    "            model.add(tf.keras.layers.Dense(305, activation='relu'))\n",
-    "            model.add(tf.keras.layers.Dense(172, activation='relu'))\n",
-    "            model.add(tf.keras.layers.Dense(76, activation='relu'))\n",
-    "            model.add(tf.keras.layers.Dense(38, activation='relu'))\n",
-    "            model.add(tf.keras.layers.Dense(19, activation='relu'))\n",
+    "            \n",
+    "            model.add(tf.keras.layers.Dense(input_layer, activation='relu'))\n",
+    "            for i in range(1, number_of_hidden_layers+1):\n",
+    "                model.add(tf.keras.layers.Dense(n_hidden_layer/i, activation='relu'))\n",
+    "                \n",
     "            model.add(tf.keras.layers.Dense(output_layer,))\n",
+    "            \n",
     "            print(loss_func, output_layer, model_file)\n",
     "            if (loss_func == 'mean_absolute_error'):\n",
     "                model.compile(optimizer='Adam', loss = 'mean_absolute_error', metrics=metrics)\n",
@@ -72,8 +76,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "033fa858",
+   "execution_count": 5,
+   "id": "f19cfbf4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,8 +110,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "c8f83449",
+   "execution_count": 6,
+   "id": "7c6cbc87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,8 +123,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "27e98d1f",
+   "execution_count": 7,
+   "id": "c7e78433",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,8 +139,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "ac10ec03",
+   "execution_count": 8,
+   "id": "20b9835e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,8 +149,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "5242411a",
+   "execution_count": 9,
+   "id": "c6cb2e66",
    "metadata": {},
    "outputs": [
     {
@@ -163,8 +167,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "2d9c3dff",
+   "execution_count": 10,
+   "id": "facbb082",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,8 +178,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "b6ee41d5",
+   "execution_count": 11,
+   "id": "beb1efc7",
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +188,7 @@
        "(1464991, 302)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,8 +199,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "bd9a7c87",
+   "execution_count": 12,
+   "id": "95863627",
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +209,7 @@
        "(1464991, 4)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,8 +220,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d1b16062",
+   "execution_count": 13,
+   "id": "663134a5",
    "metadata": {},
    "outputs": [
     {
@@ -225,11 +229,25 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "45781/45781 [==============================] - 191s 4ms/step - loss: 0.1286 - root_mean_squared_error: 1.5593 - mean_absolute_error: 0.1286 - mean_absolute_percentage_error: 412108.5000\n",
+      "45781/45781 [==============================] - 565s 12ms/step - loss: 0.0561 - root_mean_squared_error: 0.8342 - mean_absolute_error: 0.0561 - mean_absolute_percentage_error: 2178806.7500\n",
       "Epoch 2/10\n",
-      "45781/45781 [==============================] - 189s 4ms/step - loss: 0.1287 - root_mean_squared_error: 1.5669 - mean_absolute_error: 0.1287 - mean_absolute_percentage_error: 122479.8047\n",
+      "45781/45781 [==============================] - 427s 9ms/step - loss: 0.0456 - root_mean_squared_error: 0.7665 - mean_absolute_error: 0.0456 - mean_absolute_percentage_error: 1251578.2500\n",
       "Epoch 3/10\n",
-      " 6584/45781 [===>..........................] - ETA: 2:41 - loss: 0.1289 - root_mean_squared_error: 1.6104 - mean_absolute_error: 0.1289 - mean_absolute_percentage_error: 121599.5469"
+      "45781/45781 [==============================] - 438s 10ms/step - loss: 0.0433 - root_mean_squared_error: 0.7601 - mean_absolute_error: 0.0433 - mean_absolute_percentage_error: 1104062.3750\n",
+      "Epoch 4/10\n",
+      "45781/45781 [==============================] - 335s 7ms/step - loss: 0.0416 - root_mean_squared_error: 0.7451 - mean_absolute_error: 0.0416 - mean_absolute_percentage_error: 1013719.1250\n",
+      "Epoch 5/10\n",
+      "45781/45781 [==============================] - 276s 6ms/step - loss: 0.0411 - root_mean_squared_error: 0.7436 - mean_absolute_error: 0.0411 - mean_absolute_percentage_error: 989019.1875\n",
+      "Epoch 6/10\n",
+      "45781/45781 [==============================] - 272s 6ms/step - loss: 0.0404 - root_mean_squared_error: 0.7427 - mean_absolute_error: 0.0404 - mean_absolute_percentage_error: 939749.1875\n",
+      "Epoch 7/10\n",
+      "45781/45781 [==============================] - 274s 6ms/step - loss: 0.0403 - root_mean_squared_error: 0.7438 - mean_absolute_error: 0.0403 - mean_absolute_percentage_error: 922872.6875\n",
+      "Epoch 8/10\n",
+      "45781/45781 [==============================] - 281s 6ms/step - loss: 0.0398 - root_mean_squared_error: 0.7329 - mean_absolute_error: 0.0398 - mean_absolute_percentage_error: 932124.5000\n",
+      "Epoch 9/10\n",
+      "45781/45781 [==============================] - 272s 6ms/step - loss: 0.0395 - root_mean_squared_error: 0.7338 - mean_absolute_error: 0.0395 - mean_absolute_percentage_error: 906014.8750\n",
+      "Epoch 10/10\n",
+      "45781/45781 [==============================] - 281s 6ms/step - loss: 0.0392 - root_mean_squared_error: 0.7376 - mean_absolute_error: 0.0392 - mean_absolute_percentage_error: 891679.3750\n"
      ]
     }
    ],
@@ -240,15 +258,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "373f06b0",
+   "id": "34a7a08b",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "id": "1d8f2984",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: model1/assets\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.model.save(\"model1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "148521e8",
+   "id": "03fbbafb",
    "metadata": {},
    "outputs": [],
    "source": []
